Closed
Bug 992384
Opened 12 years ago
Closed 6 years ago
[SVG] Missing horizontal scroll bar when RTL direction is set on top level element
Categories
(Core :: Layout, defect, P3)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla71
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | fixed |
People
(Reporter: j.tosovsky, Assigned: TYLin)
References
(Regression)
Details
(Keywords: regression, rtl)
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:29.0) Gecko/20100101 Firefox/29.0 (Beta/Release)
Build ID: 20140331125246
Steps to reproduce:
Open the attached file and zoom it so that it overflow the browser width.
Actual results:
There is no way to scroll to the overflowed content. When RTL direction is set on any nested element, it works properly.
Expected results:
The horizontal scroll bar should be displayed.
Comment 1•12 years ago
|
||
Bonsai log:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-03-15+00%3A00%3A00&maxdate=2006-03-16+03%3A00%3A00&cvsroot=%2Fcvsroot
triggered by Bug 192767
Component: Untriaged → Layout
Product: Firefox → Core
Version: 29 Branch → Trunk
Updated•12 years ago
|
| Reporter | ||
Comment 2•10 years ago
|
||
Just found it works fine in current 42.0b4.
| Assignee | ||
Comment 3•6 years ago
|
||
This works prior to my patch in bug 1102175.
Assignee: nobody → aethanyc
Status: NEW → ASSIGNED
OS: Windows 7 → All
Priority: -- → P3
Regressed by: 1102175
Hardware: x86_64 → All
| Assignee | ||
Comment 4•6 years ago
|
||
Bug 1102175 Part 1 only handles HTML documents correctly because they
always have a body element (even if the <body> tag is not written
explicitly in the document). For SVG documents and all other documents
lacking <body> element, we always want to propagate mWritingMode from
the root element, which is our old behavior prior to Bug 1102175.
Note that mDocElementContainingBlock (i.e. nsCanvasFrame) is using
viewport's style, so we need to use the root element's computed style to
compute WritingMode for propagating.
Updated•6 years ago
|
Keywords: regression
Pushed by aethanyc@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/98575a5ca794
Make sure we always propagate root element's mWritingMode. r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/19794 for changes under testing/web-platform/tests
Upstream web-platform-tests status checks passed, PR will merge once commit reaches central.
Comment 8•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox71:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Upstream PR merged by moz-wptsync-bot
Updated•6 years ago
|
status-firefox67:
--- → unaffected
status-firefox68:
--- → unaffected
status-firefox69:
--- → unaffected
status-firefox70:
--- → unaffected
status-firefox-esr68:
--- → unaffected
Flags: in-testsuite+
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•